@@ -1,6 +1,8 @@
 Revision history for HTTP-Message
 
 {{$NEXT}}
+    - We now don't consider the Content-Location header when asked
+      for the base URI. RFC 7231 says we shouldn't. (GH#51) (Neil Bowers)
 
 6.40      2022-10-12 15:45:52Z
     - Fixed two typos in the doc, originally reported by FatherC
